--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "babel-jest": "^29.3.1",
+    "eslint": "^8.28.0",
+    "eslint-plugin-react": "^7.31.11",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "react-test-renderer": "^17.0.2"
