--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-cli": "^5.0.0"
   },
   "devDependencies": {
+    "@testing-library/react": "~12.1.4",
     "babel-jest": "^29.3.1",
     "eslint": "^8.28.0",
     "eslint-plugin-react": "^7.31.11",
