--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-client-session": "^0.0.8",
     "react-dom": "^17.0.2",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "validator": "^13.7.0",
     "webpack": "^5.75.0",
