--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "aos": "^2.3.4",
+    "aot": "^0.0.3",
     "axios": "^1.2.0",
     "babel-loader": "^9.1.0",
     "dotenv": "^16.0.3",
