--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.2.0",
     "babel-loader": "^9.1.0",
     "dotenv": "^16.0.3",
